Added rolling package to log4j.jar target.

--- a/build.xml
+++ b/build.xml
@@ -411,6 +411,7 @@
 		${stem}/jdbc/*.class,
 		${stem}/varia/*.class,
 		${stem}/nt/*.class,
+		${stem}/rolling/*.class,
 		${stem}/xml/*.class,
 		${stem}/jmx/*.class,
 		${stem}/or/*.class,
