Final changes to Struts Legacy build.xml before 1.0 release.

--- a/contrib/struts-legacy/build.xml
+++ b/contrib/struts-legacy/build.xml
@@ -1,7 +1,7 @@
 <!--
 @author Ted Husted
 @author Craig McClanahan
-@version $Revision: 1.5 $ $Date: 2003/06/06 15:46:11 $
+@version $Revision: 1.6 $ $Date: 2003/06/07 20:28:15 $
 -->
 
 <project name="struts-legacy" default="compile">
@@ -59,6 +59,30 @@
     <property name="project.distname"        value="struts-legacy"/>
     <property name="project.package"         value="org.apache.struts.faces"/>
     <property name="project.version"         value="1.0"/>
+
+    <!-- The base directory for release targets -->
+    <property name="release.home" value="release" />
+
+    <!-- Directory where binary release files are staged -->
+    <property name="stage.bin.dir" value="${release.home}/stage/bin"/>
+
+    <!-- Directory where library release files are staged -->
+    <property name="stage.lib.dir" value="${release.home}/stage/lib"/>
+
+    <!-- Directory where source release files are staged -->
+    <property name="stage.src.dir" value="${release.home}/stage/src"/>
+
+    <!-- Directory where release builds are prepared for upload -->
+    <property name="upload.dir" value="${release.home}/upload"/>
+
+    <!-- Base file name for upload files -->
+    <property name="upload.file.base" value="${project.distname}-${project.version}"/>
+
+    <!-- Doc directory -->
+    <property name="doc.dir" value="doc"/>
+
+    <!-- Web directory -->
+    <property name="web.dir" value="web"/>
 
 
     <!-- ========== Executable Targets ======================================== -->
@@ -132,6 +156,55 @@
              basedir="${build.home}/classes"
             manifest="${build.home}/conf/MANIFEST.MF"/>
     </target>
+
+    <!--
+            Construct complete release distributions
+    -->
+        <target name="release" depends="clean,dist"
+        description="Construct release distribution">
+            <mkdir dir="${stage.bin.dir}/${upload.file.base}"/>
+            <mkdir dir="${stage.lib.dir}/${upload.file.base}-lib"/>
+            <mkdir dir="${stage.src.dir}/${upload.file.base}-src"/>
+            <copy todir="${stage.bin.dir}/${upload.file.base}">
+                <fileset dir="${dist.home}"/>
+            </copy>
+            <copy todir="${stage.lib.dir}/${upload.file.base}-lib">
+                <fileset dir="${dist.home}" includes="LICENSE"/>
+                <!--
+                <fileset dir="${dist.home}/lib"/>
+                -->
+            </copy>
+            <copy todir="${stage.src.dir}/${upload.file.base}-src">
+                <fileset dir=".">
+                    <exclude name="build.properties"/>
+                    <exclude name="target/**"/>
+                    <exclude name="dist/**"/>
+                    <exclude name="release/**"/>
+                </fileset>
+            </copy>
+            <mkdir dir="${upload.dir}"/>
+            <zip  zipfile="${upload.dir}/${upload.file.base}.zip"
+                  basedir="${stage.bin.dir}"/>
+            <zip  zipfile="${upload.dir}/${upload.file.base}-lib.zip"
+                  basedir="${stage.lib.dir}"/>
+            <zip  zipfile="${upload.dir}/${upload.file.base}-src.zip"
+                  basedir="${stage.src.dir}"/>
+            <tar  tarfile="${upload.dir}/${upload.file.base}.tar"
+                  basedir="${stage.bin.dir}"
+                 longfile="gnu"/>
+            <tar  tarfile="${upload.dir}/${upload.file.base}-lib.tar"
+                  basedir="${stage.lib.dir}"
+                 longfile="gnu"/>
+            <tar  tarfile="${upload.dir}/${upload.file.base}-src.tar"
+                  basedir="${stage.src.dir}"
+                 longfile="gnu"/>
+            <gzip     src="${upload.dir}/${upload.file.base}.tar"
+                  zipfile="${upload.dir}/${upload.file.base}.tar.gz"/>
+            <gzip     src="${upload.dir}/${upload.file.base}-lib.tar"
+                  zipfile="${upload.dir}/${upload.file.base}-lib.tar.gz"/>
+            <gzip     src="${upload.dir}/${upload.file.base}-src.tar"
+                  zipfile="${upload.dir}/${upload.file.base}-src.tar.gz"/>
+        </target>
 
 
     <target name="clean"
