--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
 	<property name="version" value="0.10.0"/>
 	<property name="dest" value="./classes"/>
-	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar"/>
+	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/JWizard-0.1.0-alpha.jar"/>
 
 
 	<!-- definition of the task to check the style of the java-code -->
@@ -17,7 +17,7 @@
 			<pathelement location="${src}/lib/checkstyle-all-2.1.jar"/>
 		</classpath>
 	</taskdef>
-	
+
 	<!-- the task that realy checks the style -->
 	<target name="verify">
 		<checkstyle lcurlyType="nlow"
@@ -31,7 +31,7 @@
 		<fileset dir="${src}" includes="**/*.java"/>
 		</checkstyle>
 	</target>
-	
+
 	<target name="update">
 		<cvs command="update"/>
 	</target>
@@ -40,7 +40,7 @@
 		<echo message="you are running java version ${ant.java.version}"/>
 		<mkdir dir="${dest}"/>
 	</target>
-	
+
 	<target name="document" depends="init">
 		<delete dir="${dest}/docs/api/"/>
 		<mkdir dir="${dest}/docs/api/"/>
